# kitti_parser

./: CMakeLists.txt
src/: main_image.cpp
src/kitti_parser/: Parser.cpp  Parser.h
src/kitti_parser/types/: gpsimu_t.h  lidar_t.h  stereo_t.h
src/kitti_parser/util/: Loader.cpp  Loader.h  timestamp.cpp  timestamp.hpp
test/: CMakeLists.txt  test.cpp  test.hpp
test/fixtures/: timestamps_expected.txt
test/util/: timestamp.test.cpp
